fix: broken layout

--- a/slides/day-three/style.css
+++ b/slides/day-three/style.css
@@ -1,4 +1,8 @@
-  ul {
-    list-style: disc;
-    padding-left: 1.25em;
-  }
+ul {
+  list-style: disc;
+  padding-left: 1.25em;
+}
+
+#slideshow {
+  position: relative;
+}
